--- a/css/variables.css
+++ b/css/variables.css
@@ -1,3 +1,8 @@
+/* Smooth scrolling */
+html {
+  scroll-behavior: smooth;
+}
+
 /* CSS Custom Properties */
 :root {
   --color-background: #F2F2F2;
